package com.example.courtierprobackend.transactions.datalayer.enums;

public enum BuyerStage {
    BUYER_PREQUALIFY_FINANCIALLY,
    BUYER_SHOP_FOR_PROPERTY,
    BUYER_SUBMIT_OFFER,
    BUYER_OFFER_ACCEPTED,
    BUYER_HOME_INSPECTION,
    BUYER_FINANCING_FINALIZED,
    BUYER_FIRST_NOTARY_APPOINTMENT,
    BUYER_SECOND_NOTARY_APPOINTMENT,
    BUYER_OCCUPANCY,
    BUYER_TERMINATED
}

