package com.example.courtierprobackend.transactions.datalayer.enums;

public enum TransactionSide {
    BUY_SIDE,
    SELL_SIDE
}


