-- ============================================================================
-- V7__create_core_tables.sql
--
-- Creates all core application tables that were previously auto-generated by
-- Hibernate. This allows switching to ddl-auto=validate.
--
-- Tables created:
--   - user_accounts
--   - transactions  
--   - timeline_entries
--   - document_requests
--   - submitted_documents
-- ============================================================================

-- =============================================================================
-- USER ACCOUNTS
-- =============================================================================
CREATE TABLE IF NOT EXISTS user_accounts (
    id UUID PRIMARY KEY,
    auth0user_id VARCHAR(255) NOT NULL UNIQUE,
    email VARCHAR(255) NOT NULL UNIQUE,
    first_name VARCHAR(255),
    last_name VARCHAR(255),
    role VARCHAR(50) NOT NULL,
    active BOOLEAN NOT NULL DEFAULT true,
    preferred_language VARCHAR(10) NOT NULL DEFAULT 'en',
    created_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    updated_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP
);

CREATE INDEX IF NOT EXISTS idx_user_accounts_auth0_id ON user_accounts(auth0user_id);
CREATE INDEX IF NOT EXISTS idx_user_accounts_email ON user_accounts(email);
CREATE INDEX IF NOT EXISTS idx_user_accounts_role ON user_accounts(role);

-- =============================================================================
-- TRANSACTIONS
-- =============================================================================
CREATE TABLE IF NOT EXISTS transactions (
    id BIGSERIAL PRIMARY KEY,
    transaction_id VARCHAR(255) UNIQUE,
    client_id VARCHAR(255),
    broker_id VARCHAR(255),
    -- Embedded PropertyAddress
    street VARCHAR(255),
    city VARCHAR(255),
    province VARCHAR(255),
    postal_code VARCHAR(20),
    -- Enums stored as strings
    side VARCHAR(50),
    buyer_stage VARCHAR(50),
    seller_stage VARCHAR(50),
    status VARCHAR(50),
    opened_at TIMESTAMP,
    closed_at TIMESTAMP
);

CREATE INDEX IF NOT EXISTS idx_transactions_transaction_id ON transactions(transaction_id);
CREATE INDEX IF NOT EXISTS idx_transactions_client_id ON transactions(client_id);
CREATE INDEX IF NOT EXISTS idx_transactions_broker_id ON transactions(broker_id);
CREATE INDEX IF NOT EXISTS idx_transactions_status ON transactions(status);

-- =============================================================================
-- TIMELINE ENTRIES
-- =============================================================================
CREATE TABLE IF NOT EXISTS timeline_entries (
    id BIGSERIAL PRIMARY KEY,
    transaction_id BIGINT REFERENCES transactions(id) ON DELETE CASCADE,
    type VARCHAR(50),
    note TEXT,
    title VARCHAR(255),
    visible_to_client BOOLEAN,
    occurred_at TIMESTAMP,
    added_by_broker_id VARCHAR(255)
);

CREATE INDEX IF NOT EXISTS idx_timeline_entries_transaction ON timeline_entries(transaction_id);

-- =============================================================================
-- DOCUMENT REQUESTS
-- =============================================================================
CREATE TABLE IF NOT EXISTS document_requests (
    id BIGSERIAL PRIMARY KEY,
    request_id VARCHAR(255) UNIQUE,
    -- Embedded TransactionRef
    transaction_id VARCHAR(255),
    client_id VARCHAR(255),
    side VARCHAR(50),
    -- Document fields
    doc_type VARCHAR(100),
    custom_title VARCHAR(255),
    status VARCHAR(50),
    expected_from VARCHAR(50),
    related_buyer_stage VARCHAR(50),
    related_seller_stage VARCHAR(50),
    broker_notes TEXT,
    last_updated_at TIMESTAMP,
    visible_to_client BOOLEAN DEFAULT true
);

CREATE INDEX IF NOT EXISTS idx_document_requests_request_id ON document_requests(request_id);
CREATE INDEX IF NOT EXISTS idx_document_requests_transaction ON document_requests(transaction_id);
CREATE INDEX IF NOT EXISTS idx_document_requests_status ON document_requests(status);

-- =============================================================================
-- SUBMITTED DOCUMENTS
-- =============================================================================
CREATE TABLE IF NOT EXISTS submitted_documents (
    id BIGSERIAL PRIMARY KEY,
    document_id VARCHAR(255),
    uploaded_at TIMESTAMP,
    document_request_id BIGINT REFERENCES document_requests(id) ON DELETE CASCADE,
    -- Embedded UploadedBy
    uploader_type VARCHAR(50),
    party VARCHAR(50),
    uploader_id VARCHAR(255),
    external_name VARCHAR(255),
    -- Embedded StorageObject  
    s3_key VARCHAR(1000),
    file_name VARCHAR(255),
    mime_type VARCHAR(100),
    size_bytes BIGINT
);

CREATE INDEX IF NOT EXISTS idx_submitted_documents_request ON submitted_documents(document_request_id);
CREATE INDEX IF NOT EXISTS idx_submitted_documents_document_id ON submitted_documents(document_id);
